# hbase-haskell

./: .gitignore  LICENSE  README.md  hbase-haskell.cabal
src/Database/HBase/: Client.hs  Client1.hs
src/Database/HBase/Internal/Thrift/: Hbase.hs  Hbase_Client.hs  Hbase_Consts.hs  Hbase_Iface.hs  Hbase_Types.hs
src/Database/HBase/Internal/Thrift1/: Hbase.hs  Hbase_Client.hs  Hbase_Consts.hs  Hbase_Iface.hs  Hbase_Types.hs
src/Database/HBase/Internal/Thrift2/: HBase_Consts.hs  HBase_Types.hs  THBaseService.hs  THBaseService_Client.hs  THBaseService_Iface.hs
src/Database/Hbase/: Client.hs  Hbase.hs  Hbase_Client.hs  Hbase_Consts.hs  Hbase_Iface.hs  Hbase_Types.hs
src/Database/Hbase/Internal/: Hbase.hs  Hbase_Client.hs  Hbase_Consts.hs  Hbase_Iface.hs  Hbase_Types.hs
