name:           hbase-haskell
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         cerdep

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   thrift >= 0.9.0,
                   containers >= 0.5.0.0,
                   vector,
                   unordered-containers,
                   text,
                   hashable,
                   bytestring,
                   network
  ghc-options:     -Wall
  other-modules:   
                   Database.Hbase.Internal.Hbase,
                   Database.Hbase.Internal.Hbase_Client,
                   Database.Hbase.Internal.Hbase_Consts,
                   Database.Hbase.Internal.Hbase_Iface,
                   Database.Hbase.Internal.Hbase_Types
  exposed-modules: Database.Hbase.Client

