name:           hbase-haskell
version:        0.1
synopsis:       An light wrapper over the HBase Thrift API
license:        MIT
license-file:   LICENSE
cabal-version:  >=1.2
build-type:     Simple
author:         Dan Plubell
maintainer:     danplubell@gmail.com
homepage:       https://github.com/danplubell/hbase-haskell
category:       Database
description:
  The objective of this library is to provide a light wrapper over the HBase Thrift API.  The intent is to provide a more idiomatic 
  way of using an HBase database.
  .
  


library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   thrift >= 0.9.0,
                   containers >= 0.5.0.0,
                   vector,
                   unordered-containers,
                   text,
                   hashable,
                   bytestring,
                   network
  ghc-options:     -Wall
  other-modules:   
                   Database.Hbase.Internal.Hbase,
                   Database.Hbase.Internal.Hbase_Client,
                   Database.Hbase.Internal.Hbase_Consts,
                   Database.Hbase.Internal.Hbase_Iface,
                   Database.Hbase.Internal.Hbase_Types
  exposed-modules: Database.Hbase.Client

